# myhome-assistant

./: .gitignore  AUTOMATION_RULES.md  Makefile  README.md  rebar.config  sdkconfig.defaults
.github/workflows/: pages.yml
docs/: architecture-i2c-protocol.md
firmware/xiao_ble/: BUILD_SETUP.md  CMakeLists.txt  README.md  prj.conf
firmware/xiao_ble/boards/: xiao_ble.overlay
firmware/xiao_ble/src/: ble_central.c  ble_central.h  event_queue.c  event_queue.h  (+5 more)
mcp_server/: requirements.txt  server.py
nifs/ble/: CMakeLists.txt  ble_port.c
nifs/ble/include/: ble_port.h
patches/: sdkconfig.defaults.in.patch
plans/: aircraft_identification.md  automation_rules.md  ble_port_refactor.md  ikea_solskydd_volume.md  navimow_integration.md  phase5-step1-autoconnect.md  philips_hue_control.md  phillips-wiz.md  sensor_integration.md  two-chip-architecture-plan.md  using-nerves.md  waveshare-ESP32-P4-NANO.md  xiao-nrf52840-ble-offload.md
src/: ble.erl  myhome_app.erl  myhome_assistant.app.src  myhome_ble_conn.erl  myhome_ble_i2c.erl  myhome_config.erl.template  myhome_discovery.erl  myhome_event_bus.erl  myhome_http.erl  myhome_http_handler.erl  myhome_hue_ble.erl  myhome_lcd.erl  myhome_lights.erl  myhome_log.erl  myhome_rules.erl  myhome_scanner.erl  myhome_sensors.erl  myhome_sup.erl  myhome_time.erl  myhome_top_sup.erl  myhome_wiz.erl  tiny_httpd.erl  tiny_json.erl
test/: myhome_rules_tests.erl  myhome_time_tests.erl  prop_myhome_rules.erl  prop_myhome_time.erl
tools/: navimow_client.py  navimow_login.py  navimow_server.py  navimow_status.py
viz/: index.html
